PEH-16962 - Greek language alignment issues fix 2

--- a/force-app/main/community-pages-pp_2/televisits/lwc/ppTelevisit/ppTelevisit.css
+++ b/force-app/main/community-pages-pp_2/televisits/lwc/ppTelevisit/ppTelevisit.css
@@ -1,60 +1,60 @@
 .my-televisits {
-  height: 48px;
-  width: 340px;
-  color: #444444;
-  font-family: "Proxima Nova";
-  font-size: 32px;
-  font-weight: 600;
-  letter-spacing: 0;
-}
-.my-televisits-delegate{
     height: 48px;
     width: 340px;
     color: #444444;
-    font-family: "Proxima Nova";
+    font-family: 'Proxima Nova';
+    font-size: 32px;
+    font-weight: 600;
+    letter-spacing: 0;
+}
+.my-televisits-delegate {
+    height: 48px;
+    width: 340px;
+    color: #444444;
+    font-family: 'Proxima Nova';
     font-size: 32px;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 70px;
 }
-.delegatecss{
-    padding-left: 32px; 
+.delegatecss {
+    padding-left: 32px;
     padding-top: 13px;
 }
-.delegatecssmobile{
+.delegatecssmobile {
     margin-left: 1rem;
 }
-.delegatetelevisitmobile{
+.delegatetelevisitmobile {
     height: 30px;
-    cursor:pointer;
+    cursor: pointer;
     margin-left: -10px;
 }
-.my-televisits-mobile{
-  height: 32px;
-  width: 217px;
-  color: #444444;
-  font-family: "Proxima Nova";
-  font-size: 24px;
-  font-weight: 600;
-  letter-spacing: 0;
-  line-height: 32px;
-  margin-left: 1rem;
-  }
-  .my-televisits-mobiledelegate{
+.my-televisits-mobile {
     height: 32px;
     width: 217px;
     color: #444444;
-    font-family: "Proxima Nova";
+    font-family: 'Proxima Nova';
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-left: 1rem;
+}
+.my-televisits-mobiledelegate {
+    height: 32px;
+    width: 217px;
+    color: #444444;
+    font-family: 'Proxima Nova';
     font-size: 24px;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 50px;
-    }
+}
 .delegate-televisit {
     height: 24px;
     width: 67px;
     color: #444444;
-    font-family: "Proxima Nova";
+    font-family: 'Proxima Nova';
     font-size: 16px;
     font-weight: 500;
     letter-spacing: 0;
@@ -69,26 +69,26 @@
     width: 630px;
     display: grid;
     border-radius: 16px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
 }
 .televisit-card-upcoming-mobile {
-  height: 152px;
-  width: 315px;
-  border: 1px solid #D9D9D9;
-  border-radius: 16px;
-  background-color: #FFFFFF;
-  display : grid;
+    height: 152px;
+    width: 315px;
+    border: 1px solid #d9d9d9;
+    border-radius: 16px;
+    background-color: #ffffff;
+    display: grid;
 }
 .text-colour {
-  height: 24px;
-  width: 203px;
-  color: #999999;
-  font-family: "Proxima Nova";
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 45px;
-  text-align: center;
+    height: 24px;
+    min-width: 203px;
+    color: #999999;
+    font-family: 'Proxima Nova';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 45px;
+    text-align: center;
 }
 .text-colour-mobile {
     color: #999999;
@@ -96,7 +96,7 @@
     font-weight: 500;
     line-height: 45px;
     text-align: center;
-  }
+}
 .center-align {
     text-align: center;
 }
@@ -164,35 +164,35 @@
     align-items: center;
 }
 .active-custom-box .slds-grid,
-    .inactive-custom-box .slds-grid {
-        justify-content: space-between;
-    }
+.inactive-custom-box .slds-grid {
+    justify-content: space-between;
+}
 
-    .active-custom-box .slds-grid .slds-col:first-child,
-    .inactive-custom-box .slds-grid .slds-col:first-child {
-        width: 0.25rem;
-    }
+.active-custom-box .slds-grid .slds-col:first-child,
+.inactive-custom-box .slds-grid .slds-col:first-child {
+    width: 0.25rem;
+}
 
-    .active-custom-box .slds-grid .slds-col:nth-child(2),
-    .inactive-custom-box .slds-grid .slds-col:nth-child(2) {
-        margin-left: -1rem;
-    }
+.active-custom-box .slds-grid .slds-col:nth-child(2),
+.inactive-custom-box .slds-grid .slds-col:nth-child(2) {
+    margin-left: -1rem;
+}
 
-    .active-custom-box .slds-grid .slds-col:nth-child(-n + 2),
-    .inactive-custom-box .slds-grid .slds-col:nth-child(-n + 2) {
-        padding-left: unset;
-        padding-right: unset;
-    }
+.active-custom-box .slds-grid .slds-col:nth-child(-n + 2),
+.inactive-custom-box .slds-grid .slds-col:nth-child(-n + 2) {
+    padding-left: unset;
+    padding-right: unset;
+}
 .pointer {
-        cursor: pointer;
+    cursor: pointer;
 }
 .com-icon {
-        height: 16px;
-        color: grey;
-        width: 16px;
-        margin-right: 8px;
-        fill: #999999;
+    height: 16px;
+    color: grey;
+    width: 16px;
+    margin-right: 8px;
+    fill: #999999;
 }
-.delegate-desktop{
+.delegate-desktop {
     margin-top: -7px;
 }
