--- a/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
+++ b/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
@@ -1650,7 +1650,7 @@ input:focus + .slds-checkbox__label > .slds-checkbox_faux {
 .manage-del .remove-btn {
     border: 1px solid #d9d9d9 !important;
     border-radius: 16px !important;
-    width: 107px !important;
+    min-width: 107px !important;
 }
 .manage-del .remove-btn-mob {
     border: 1px solid #d9d9d9 !important;
